--- a/main.ipynb
+++ b/main.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "id": "c64023c1",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "id": "4906cf30",
    "metadata": {},
    "outputs": [
@@ -517,7 +517,7 @@
          "type": "integer"
         }
        ],
-       "ref": "39c98218-689a-4933-8675-2eaea60f608a",
+       "ref": "f5e513b3-9500-4ed5-81c5-8a71001e937e",
        "rows": [
         [
          "0",
@@ -1138,7 +1138,7 @@
        "[5 rows x 81 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1155,7 +1155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "id": "4aae994b",
    "metadata": {},
    "outputs": [
@@ -1285,7 +1285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "id": "58d84e78",
    "metadata": {},
    "outputs": [
@@ -1366,7 +1366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "id": "77776473",
    "metadata": {},
    "outputs": [
@@ -1538,7 +1538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "id": "4751a3b4",
    "metadata": {},
    "outputs": [
@@ -1611,7 +1611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "id": "dbaa3776",
    "metadata": {},
    "outputs": [
@@ -1720,7 +1720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "id": "3a12ce9e",
    "metadata": {},
    "outputs": [
@@ -1743,8 +1743,8 @@
       "Dep. Variable:              SalePrice   R-squared:                       0.611\n",
       "Model:                            OLS   Adj. R-squared:                  0.610\n",
       "Method:                 Least Squares   F-statistic:                     1372.\n",
-      "Date:                seg, 08 dez 2025   Prob (F-statistic):          2.52e-181\n",
-      "Time:                        20:54:37   Log-Likelihood:                -10667.\n",
+      "Date:                Tue, 09 Dec 2025   Prob (F-statistic):          2.52e-181\n",
+      "Time:                        10:48:40   Log-Likelihood:                -10667.\n",
       "No. Observations:                 876   AIC:                         2.134e+04\n",
       "Df Residuals:                     874   BIC:                         2.135e+04\n",
       "Df Model:                           1                                         \n",
@@ -1810,7 +1810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "id": "09d340d8",
    "metadata": {},
    "outputs": [
@@ -1832,8 +1832,8 @@
       "Dep. Variable:              SalePrice   R-squared:                       0.741\n",
       "Model:                            OLS   Adj. R-squared:                  0.738\n",
       "Method:                 Least Squares   F-statistic:                     275.3\n",
-      "Date:                seg, 08 dez 2025   Prob (F-statistic):          4.83e-247\n",
-      "Time:                        20:54:37   Log-Likelihood:                -10489.\n",
+      "Date:                Tue, 09 Dec 2025   Prob (F-statistic):          4.83e-247\n",
+      "Time:                        10:48:40   Log-Likelihood:                -10489.\n",
       "No. Observations:                 876   AIC:                         2.100e+04\n",
       "Df Residuals:                     866   BIC:                         2.105e+04\n",
       "Df Model:                           9                                         \n",
@@ -1898,7 +1898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
    "id": "3a066f7a",
    "metadata": {},
    "outputs": [
@@ -1954,7 +1954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 11,
    "id": "a88003c2",
    "metadata": {},
    "outputs": [
@@ -2034,7 +2034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 12,
    "id": "e67f4253",
    "metadata": {},
    "outputs": [
@@ -2146,7 +2146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 13,
    "id": "0fe37d84",
    "metadata": {},
    "outputs": [
@@ -2210,10 +2210,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "d8e4e68c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GRID SEARCH - Logistic Regression (Classificação):\n",
+      "  Melhores parâmetros: {'C': 0.01, 'penalty': 'l2', 'solver': 'liblinear'}\n",
+      "  Melhor score (CV): 0.9795\n",
+      "\n",
+      "Logistic Regression (Grid Search) - Validation Set:\n",
+      "  Accuracy: 0.9075\n",
+      "  Precision: 0.9281\n",
+      "  Recall: 0.8836\n",
+      "  F1-Score: 0.9053\n",
+      "  AUC-ROC: 0.9647\n",
+      "\n",
+      "======================================================================\n",
+      "RANDOM SEARCH - ElasticNet (Regressão):\n",
+      "  Melhores parâmetros: {'l1_ratio': np.float64(0.8421052631578947), 'alpha': 1}\n",
+      "  Melhor score (CV): 40140.14 (RMSE)\n",
+      "\n",
+      "======================================================================\n",
+      "COMPARAÇÃO: Modelos Iniciais vs Tuned\n",
+      "======================================================================\n",
+      "                       Modelo  Accuracy  Precision   Recall  F1-Score  AUC-ROC\n",
+      "Logistic Regression (Inicial)  0.904110   0.927536 0.876712  0.901408 0.968756\n",
+      "  Logistic Regression (Tuned)  0.907534   0.928058 0.883562  0.905263 0.964674\n"
+     ]
+    }
+   ],
    "source": [
     "## 1️⃣0️⃣ OTIMIZAÇÃO COM GRID SEARCH E RANDOM SEARCH\n",
     "\n",
@@ -2262,7 +2291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "36222e01",
    "metadata": {},
    "outputs": [
@@ -2299,7 +2328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "9e2b6419",
    "metadata": {},
    "outputs": [
@@ -2390,7 +2419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "899573c7",
    "metadata": {},
    "outputs": [
